argocd/manifests/paperless-ringtail/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-tailscale
  namespace: paperless
  annotations:
    tailscale.com/proxy-class: "default"
    tailscale.com/proxy-group: "ingress"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Paperless"
    gethomepage.dev/group: "Home"
    gethomepage.dev/icon: "paperless-ngx.png"
    gethomepage.dev/description: "Document management"
    gethomepage.dev/href: "https://paperless.ops.eblu.me"
    gethomepage.dev/pod-selector: "app=paperless"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: paperless
      port:
        number: 8000
  tls:
    - hosts:
        - paperless
